--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "axios": "^0.21.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "node-fetch": "^2.6.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
